Fixed overflow issue for long sub-folder names in locations tree (nowrap)

--- a/resources/style/remake/outliner.scss
+++ b/resources/style/remake/outliner.scss
@@ -131,6 +131,7 @@
   align-items: center;
   height: 1.5rem;
   width: 100%;
+  white-space: nowrap;
 
   span {
     display: inline-flex;
